RESOLVED FIXED159769
Fix the DatabaseProcess build with disabled IDB
https://bugs.webkit.org/show_bug.cgi?id=159769
Summary Fix the DatabaseProcess build with disabled IDB
Csaba Osztrogonác
Reported 2016-07-14 09:06:45 PDT
build-webkit --minimal disables IDB, but doesn't DatabaseProcess. However now IDB is the only one user of the DatabaseProcess, but we should keep the two if guard based on previous discussion. ../../Source/WebKit2/WebProcess/Databases/WebToDatabaseProcessConnection.cpp: In member function 'virtual void WebKit::WebToDatabaseProcessConnection::didClose(IPC::Connection&)': ../../Source/WebKit2/WebProcess/Databases/WebToDatabaseProcessConnection.cpp:67:29: error: 'm_webIDBConnectionsByIdentifier' was not declared in this scope ../../Source/WebKit2/WebProcess/Databases/WebToDatabaseProcessConnection.cpp:70:5: error: 'm_webIDBConnectionsByIdentifier' was not declared in this scope ../../Source/WebKit2/WebProcess/Databases/WebToDatabaseProcessConnection.cpp:71:5: error: 'm_webIDBConnectionsBySession' was not declared in this scope
Attachments
Patch (1.60 KB, patch)
2016-07-14 09:07 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-07-14 09:07:46 PDT
WebKit Commit Bot
Comment 2 2016-07-14 10:51:34 PDT
Comment on attachment 283650 [details] Patch Clearing flags on attachment: 283650 Committed r203227: <http://trac.webkit.org/changeset/203227>
WebKit Commit Bot
Comment 3 2016-07-14 10:51:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.