Fix the DatabaseProcess build with disabled IDB https://bugs.webkit.org/show_bug.cgi?id=159769

Reviewed by Alex Christensen.

* WebProcess/Databases/WebToDatabaseProcessConnection.cpp:
(WebKit::WebToDatabaseProcessConnection::didClose):


Canonical link: https://commits.webkit.org/177917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203227 268f45cc-cd09-0410-ab3c-d52691b4dbfc